<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="ngohoanglong.com.dacsan.view.signup.SignupViewModel" />

        <variable
            name="viewModel"
            type="SignupViewModel" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".view.signup.SignupActivity">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#ffffff"
            android:fitsSystemWindows="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerInside"
                android:padding="20dp"
                android:src="@drawable/icon" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                app:error="@{viewModel.emailError}"
                app:errorEnabled="true">
                <!--app:error="@{viewModel.emailError}"-->
                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/gray"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:textColor="#828282"
                    app:textChange="@{viewModel.emailSignupChange}"
                    tools:text="asdasdad" />
            </android.support.design.widget.TextInputLayout>
            <!--app:textChange="@{viewModel.emailSignupChange}"-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                app:error="@{viewModel.passwordError}"
                app:errorEnabled="true">
                <!--app:error="@{viewModel.passwordError}"-->
                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/gray"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:textColor="#828282"
                    app:textChange="@{viewModel.passwordSignupChange}"
                    tools:text="asdasdad" />
                <!--app:textChange="@{viewModel.passwordSignupChange}"-->
            </android.support.design.widget.TextInputLayout>

            <ViewAnimator
                android:id="@+id/vaLoginState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inAnimation="@android:anim/fade_in"
                android:outAnimation="@android:anim/fade_out">

                <ProgressBar
                    android:id="@+id/pbLoading"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center|bottom"
                    android:layout_marginBottom="20dp" />

                <Button
                    android:id="@+id/btnSignup"
                    style="?android:textAppearanceSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="20dip"
                    android:background="@drawable/button_login"
                    android:enabled="@{viewModel.signupBtnState}"
                    android:text="@string/action_sign_in_short"
                    android:textColor="@android:color/white" />
            </ViewAnimator>

            <Button
                android:id="@+id/btnResetPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@null"
                android:text="@string/btn_forgot_password"
                android:textAllCaps="false"
                android:textColor="#cecece" />

            <!-- Link to Login Screen -->

            <Button
                android:id="@+id/btnSignin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="20dip"
                android:background="@null"
                android:text="@string/btn_link_to_login"
                android:textAllCaps="false"
                android:textColor="#9a635c"
                android:textSize="15dp" />
        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>
</layout>